--- a/addrec.css
+++ b/addrec.css
@@ -31,7 +31,7 @@ body {
       rgba(240, 250, 240, 0.7),
       rgba(129, 171, 255, 0.5)
     ),
-    url("/testestesteaste/yar.jpg");
+    url("/yar.jpg");
   background-size: cover;
   background-position: center center;
 }
